# THESIS_P3

./: .gitignore  README.md  algorithm_pseudocodes.md  commands.md  preflight.py  pyproject.toml  run_thesis.py  scratch_analysis.py  thesis_results_analysis.md  walkthrough.md
backup_outputs/outputs_before_final_run/: benchmark_manifest.json  benchmark_results.csv  benchmark_results.json  reproducibility_manifest.json  statistical_tables.md
backups/intermediate_old_2026-07-14_16-09-16/: run_communication_blackout_ACO_100_seed10.json  run_communication_blackout_ACO_100_seed2.json  run_communication_blackout_ACO_100_seed3.json  run_communication_blackout_ACO_100_seed4.json  run_communication_blackout_ACO_100_seed7.json  run_communication_blackout_ACO_200_seed2.json  run_communication_blackout_ACO_200_seed4.json  run_communication_blackout_ACO_200_seed7.json  run_communication_blackout_ACO_200_seed8.json  run_communication_blackout_ACO_200_seed9.json  (+753 more)
configs/: manhattan_sample.yaml
docs/: ADAPTIVE_WEIGHTING_DESIGN.md  ARCHITECTURE_DECISIONS.md  DEPENDENCY_GRAPH.md  E3_HYBRID_DESIGN.md  FINAL_RUN_COMMANDS.md  IMPLEMENTATION_STATUS.md  RUN_GUIDE.md  THESIS_BUILD_TRACKER.md
outputs/: benchmark_manifest.json  benchmark_summary.md  light_simulation_summary.md  statistical_tables.md  validation_summary.csv
scripts/: generate_benchmark_configs.py  light_map_simulation.py  preflight.py  profile_algorithms.py  run_benchmarks.py  run_everything.sh  run_manhattan_smoke_test.py  run_manhattan_validation.py
src/: __init__.py
src/core/: __init__.py  (+3 more)
tests/: __init__.py
(+104 files in other folders)
