[tool.poetry]
name = "e3-hybrid-routing"
version = "0.1.0"
description = "E³-Hybrid Swarm Routing for Electric Vehicles Under Dynamic Urban Emergencies"
authors = ["Undergraduate Student <student@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
numpy = "^1.24.3"
pydantic = "^2.4.2"
matplotlib = "^3.7.1"
sumolib = "^1.18.0"
traci = "^1.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
mypy = "^1.3.0"
ruff = "^0.0.272"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
